--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.9.0",
     "chart.js": "^1.1.1",
     "dotenv": "^8.2.0",
+    "node-sass": "^4.13.1",
     "react": "^16.7.0",
     "react-chartjs": "^1.2.0",
     "react-dom": "^16.7.0",
