--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react": "^16.7.0",
     "react-chartjs": "^1.2.0",
     "react-dom": "^16.7.0",
+    "react-qr-svg": "^2.2.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.2"
   },
