--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@material-ui/core": "^4.9.0",
     "chart.js": "^1.1.1",
     "dotenv": "^8.2.0",
+    "moment": "^2.24.0",
     "node-sass": "^4.13.1",
     "qrcode.react": "^1.0.0",
     "react": "^16.7.0",
